<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dashkiosk</string>
    <string name="app_versionName">2.2.2</string>
    <string name="app_versionCode">6</string>
    <string name="preferences">Dashkiosk preferences</string>
    <string name="pref_general_title">General settings</string>
    <string name="pref_general_orientation">Orientation</string>
    <string name="pref_general_orientation_summary">Device orientation</string>
    <string name="pref_lock_settings">Lock settings</string>
    <string name="pref_lock_settings_summary_on">Forbid settings modification from the application.</string>
    <string name="pref_lock_settings_summary_off">Allow to modify settings from the application.</string>
    <string name="pref_ping_title">Dashboard URL</string>
    <string name="pref_ping_url">URL</string>
    <string name="pref_ping_url_summary">URL to the dashboard web application</string>
    <string name="pref_ping_timeout">Timeout</string>
    <string name="pref_ping_timeout_summary">Timeout in milliseconds when retrieving URL</string>
    <string name="wait">Please, wait.</string>
    <string name="wait_quote">This, Jen, is the Internet.</string>
</resources>
