<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
      android:title="@string/pref_general_title"
      android:key="pref_general_settings">
    <ListPreference
        android:key="pref_general_orientation"
        android:title="@string/pref_general_orientation"
        android:dialogTitle="@string/pref_general_orientation"
        android:summary="@string/pref_general_orientation_summary"
        android:entries="@array/pref_general_orientation_entries"
        android:entryValues="@array/pref_general_orientation_values"
        android:defaultValue="LANDSCAPE" />
    <CheckBoxPreference
        android:key="pref_lock_settings"
        android:title="@string/pref_lock_settings"
        android:summaryOn="@string/pref_lock_settings_summary_on"
        android:summaryOff="@string/pref_lock_settings_summary_off"
        android:defaultValue="false" />
  </PreferenceCategory>
  <PreferenceCategory
      android:title="@string/pref_ping_title"
      android:key="pref_ping_settings">
    <EditTextPreference
        android:key="pref_ping_url"
        android:title="@string/pref_ping_url"
        android:summary="@string/pref_ping_url_summary"
        android:defaultValue="http://dashkiosk" />
    <ListPreference
        android:key="pref_ping_timeout"
        android:title="@string/pref_ping_timeout"
        android:summary="@string/pref_ping_timeout_summary"
        android:entries="@array/pref_ping_timeout_entries"
        android:entryValues="@array/pref_ping_timeout_values"
        android:defaultValue="30000" />
  </PreferenceCategory>
</PreferenceScreen>
